--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -84,8 +84,7 @@ subdir = plugins
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/kerberos_v4.m4 \
-	$(top_srcdir)/config/libtool.m4 $(top_srcdir)/config/plain.m4 \
-	$(top_srcdir)/config/sasldb.m4 \
+	$(top_srcdir)/config/plain.m4 $(top_srcdir)/config/sasldb.m4 \
 	$(top_srcdir)/cmulocal/berkdb.m4 \
 	$(top_srcdir)/cmulocal/bsd_sockets.m4 \
 	$(top_srcdir)/cmulocal/c-attribute.m4 \
@@ -93,6 +92,11 @@ am__aclocal_m4_deps = $(top_srcdir)/config/kerberos_v4.m4 \
 	$(top_srcdir)/cmulocal/cyrus.m4 \
 	$(top_srcdir)/cmulocal/init_automake.m4 \
 	$(top_srcdir)/cmulocal/ipv6.m4 \
+	$(top_srcdir)/cmulocal/libtool.m4 \
+	$(top_srcdir)/cmulocal/ltoptions.m4 \
+	$(top_srcdir)/cmulocal/ltsugar.m4 \
+	$(top_srcdir)/cmulocal/ltversion.m4 \
+	$(top_srcdir)/cmulocal/lt~obsolete.m4 \
 	$(top_srcdir)/cmulocal/openldap.m4 \
 	$(top_srcdir)/cmulocal/openssl.m4 \
 	$(top_srcdir)/cmulocal/sasl2.m4 $(top_srcdir)/configure.in
@@ -115,82 +119,82 @@ am__objects_1 = plugin_common.lo
 am_libanonymous_la_OBJECTS = anonymous.lo anonymous_init.lo \
 	$(am__objects_1)
 libanonymous_la_OBJECTS = $(am_libanonymous_la_OBJECTS)
-libanonymous_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libanonymous_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libanonymous_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libcrammd5_la_OBJECTS = cram.lo crammd5_init.lo $(am__objects_1)
 libcrammd5_la_OBJECTS = $(am_libcrammd5_la_OBJECTS)
-libcrammd5_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libcrammd5_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libcrammd5_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libdigestmd5_la_OBJECTS = digestmd5.lo digestmd5_init.lo \
 	$(am__objects_1)
 libdigestmd5_la_OBJECTS = $(am_libdigestmd5_la_OBJECTS)
-libdigestmd5_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libdigestmd5_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libdigestmd5_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libgs2_la_OBJECTS = gs2.lo gs2_init.lo gs2_token.lo \
 	$(am__objects_1)
 libgs2_la_OBJECTS = $(am_libgs2_la_OBJECTS)
-libgs2_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libgs2_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libgs2_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libgssapiv2_la_OBJECTS = gssapi.lo gssapiv2_init.lo \
 	$(am__objects_1)
 libgssapiv2_la_OBJECTS = $(am_libgssapiv2_la_OBJECTS)
-libgssapiv2_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libgssapiv2_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libgssapiv2_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libkerberos4_la_OBJECTS = kerberos4.lo kerberos4_init.lo \
 	$(am__objects_1)
 libkerberos4_la_OBJECTS = $(am_libkerberos4_la_OBJECTS)
-libkerberos4_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libkerberos4_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libkerberos4_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libldapdb_la_OBJECTS = ldapdb.lo ldapdb_init.lo $(am__objects_1)
 libldapdb_la_OBJECTS = $(am_libldapdb_la_OBJECTS)
-libldapdb_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libldapdb_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libldapdb_la_LDFLAGS) $(LDFLAGS) -o $@
 am_liblogin_la_OBJECTS = login.lo login_init.lo $(am__objects_1)
 liblogin_la_OBJECTS = $(am_liblogin_la_OBJECTS)
-liblogin_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+liblogin_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(liblogin_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libntlm_la_OBJECTS = ntlm.lo ntlm_init.lo $(am__objects_1)
 libntlm_la_OBJECTS = $(am_libntlm_la_OBJECTS)
-libntlm_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libntlm_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libntlm_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libotp_la_OBJECTS = otp.lo otp_init.lo $(am__objects_1)
 libotp_la_OBJECTS = $(am_libotp_la_OBJECTS)
-libotp_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libotp_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libotp_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libpassdss_la_OBJECTS = passdss.lo passdss_init.lo $(am__objects_1)
 libpassdss_la_OBJECTS = $(am_libpassdss_la_OBJECTS)
-libpassdss_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libpassdss_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libpassdss_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libplain_la_OBJECTS = plain.lo plain_init.lo $(am__objects_1)
 libplain_la_OBJECTS = $(am_libplain_la_OBJECTS)
-libplain_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libplain_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libplain_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libsasldb_la_OBJECTS = sasldb.lo sasldb_init.lo $(am__objects_1)
 libsasldb_la_OBJECTS = $(am_libsasldb_la_OBJECTS)
-libsasldb_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libsasldb_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libsasldb_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libsql_la_OBJECTS = sql.lo sql_init.lo $(am__objects_1)
 libsql_la_OBJECTS = $(am_libsql_la_OBJECTS)
-libsql_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libsql_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libsql_la_LDFLAGS) $(LDFLAGS) -o $@
 am_libsrp_la_OBJECTS = srp.lo srp_init.lo $(am__objects_1)
 libsrp_la_OBJECTS = $(am_libsrp_la_OBJECTS)
-libsrp_la_LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+libsrp_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libsrp_la_LDFLAGS) $(LDFLAGS) -o $@
 SCRIPTS = $(noinst_SCRIPTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
@@ -198,12 +202,13 @@ depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
-LTCOMPILE = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
+LTCOMPILE = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
-LINK = $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link \
-	$(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
+LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
+	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
+	$(LDFLAGS) -o $@
 SOURCES = $(libanonymous_la_SOURCES) $(libcrammd5_la_SOURCES) \
 	$(libdigestmd5_la_SOURCES) $(libgs2_la_SOURCES) \
 	$(libgssapiv2_la_SOURCES) $(libkerberos4_la_SOURCES) \
@@ -225,6 +230,7 @@ CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
+AR = @AR@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -240,11 +246,14 @@ DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DIRS = @DIRS@
 DMALLOC_LIBS = @DMALLOC_LIBS@
+DSYMUTIL = @DSYMUTIL@
+DUMPBIN = @DUMPBIN@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+FGREP = @FGREP@
 GETADDRINFOOBJS = @GETADDRINFOOBJS@
 GETNAMEINFOOBJS = @GETNAMEINFOOBJS@
 GETSUBOPT = @GETSUBOPT@
@@ -262,6 +271,7 @@ JAVADOC = @JAVADOC@
 JAVAH = @JAVAH@
 JAVAROOT = @JAVAROOT@
 JAVA_INCLUDES = @JAVA_INCLUDES@
+LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
@@ -274,6 +284,7 @@ LIB_MYSQL = @LIB_MYSQL@
 LIB_PGSQL = @LIB_PGSQL@
 LIB_SOCKET = @LIB_SOCKET@
 LIB_SQLITE = @LIB_SQLITE@
+LIPO = @LIPO@
 LN_S = @LN_S@
 LTGETADDRINFOOBJS = @LTGETADDRINFOOBJS@
 LTGETNAMEINFOOBJS = @LTGETNAMEINFOOBJS@
@@ -282,8 +293,12 @@ LTSNPRINTFOBJS = @LTSNPRINTFOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
+NMEDIT = @NMEDIT@
 NTLM_LIBS = @NTLM_LIBS@
+OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OTOOL = @OTOOL@
+OTOOL64 = @OTOOL64@
 OTP_LIBS = @OTP_LIBS@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
@@ -312,6 +327,7 @@ SASL_STATIC_OBJS = @SASL_STATIC_OBJS@
 SASL_STATIC_SRCS = @SASL_STATIC_SRCS@
 SASL_UTIL_HEADERS_EXTRA = @SASL_UTIL_HEADERS_EXTRA@
 SASL_UTIL_LIBS_EXTRA = @SASL_UTIL_LIBS_EXTRA@
+SED = @SED@
 SET_MAKE = @SET_MAKE@
 SFIO_INC_FLAGS = @SFIO_INC_FLAGS@
 SFIO_LIB_FLAGS = @SFIO_LIB_FLAGS@
@@ -326,6 +342,7 @@ abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
 ac_ct_CC = @ac_ct_CC@
+ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
 am__include = @am__include@
 am__leading_dot = @am__leading_dot@
 am__quote = @am__quote@
@@ -408,70 +425,70 @@ EXTRA_LTLIBRARIES = libplain.la libanonymous.la libkerberos4.la libcrammd5.la \
 	libntlm.la libpassdss.la libsasldb.la libsql.la libldapdb.la
 
 libplain_la_SOURCES = plain.c plain_init.c $(common_sources)
-libplain_la_LDFLAGS = -version-info $(plain_version)
+libplain_la_LDFLAGS = -version-info $(plain_version) $(AM_LDFLAGS)
 libplain_la_DEPENDENCIES = $(COMPAT_OBJS)
 libplain_la_LIBADD = $(PLAIN_LIBS) $(COMPAT_OBJS)
 libanonymous_la_SOURCES = anonymous.c anonymous_init.c $(common_sources)
-libanonymous_la_LDFLAGS = -version-info $(anonymous_version)
+libanonymous_la_LDFLAGS = -version-info $(anonymous_version) $(AM_LDFLAGS)
 libanonymous_la_DEPENDENCIES = $(COMPAT_OBJS)
 libanonymous_la_LIBADD = $(COMPAT_OBJS)
 libkerberos4_la_SOURCES = kerberos4.c kerberos4_init.c $(common_sources)
-libkerberos4_la_LDFLAGS = -version-info $(kerberos4_version)
+libkerberos4_la_LDFLAGS = -version-info $(kerberos4_version) $(AM_LDFLAGS)
 libkerberos4_la_DEPENDENCIES = $(COMPAT_OBJS)
 libkerberos4_la_LIBADD = $(SASL_KRB_LIB) $(LIB_SOCKET) $(COMPAT_OBJS)
 libgs2_la_SOURCES = gs2.c gs2_init.c gs2_token.c $(common_sources)
-libgs2_la_LDFLAGS = -version-info $(gs2_version)
+libgs2_la_LDFLAGS = -version-info $(gs2_version) $(AM_LDFLAGS)
 libgs2_la_DEPENDENCIES = $(COMPAT_OBJS)
 libgs2_la_LIBADD = $(GSSAPIBASE_LIBS) $(GSSAPI_LIBS) $(LIB_SOCKET) $(COMPAT_OBJS)
 libgssapiv2_la_SOURCES = gssapi.c gssapiv2_init.c $(common_sources)
-libgssapiv2_la_LDFLAGS = -version-info $(gssapiv2_version)
+libgssapiv2_la_LDFLAGS = -version-info $(gssapiv2_version) $(AM_LDFLAGS)
 libgssapiv2_la_DEPENDENCIES = $(COMPAT_OBJS)
 libgssapiv2_la_LIBADD = $(GSSAPIBASE_LIBS) $(GSSAPI_LIBS) $(LIB_SOCKET) $(COMPAT_OBJS)
 libcrammd5_la_SOURCES = cram.c crammd5_init.c $(common_sources)
-libcrammd5_la_LDFLAGS = -version-info $(crammd5_version)
+libcrammd5_la_LDFLAGS = -version-info $(crammd5_version) $(AM_LDFLAGS)
 libcrammd5_la_DEPENDENCIES = $(COMPAT_OBJS)
 libcrammd5_la_LIBADD = $(COMPAT_OBJS)
 libdigestmd5_la_SOURCES = digestmd5.c digestmd5_init.c $(common_sources)
-libdigestmd5_la_LDFLAGS = -version-info $(digestmd5_version)
+libdigestmd5_la_LDFLAGS = -version-info $(digestmd5_version) $(AM_LDFLAGS)
 libdigestmd5_la_DEPENDENCIES = $(COMPAT_OBJS)
 libdigestmd5_la_LIBADD = $(LIB_DES) $(LIB_SOCKET) $(COMPAT_OBJS)
 liblogin_la_SOURCES = login.c login_init.c $(common_sources)
-liblogin_la_LDFLAGS = -version-info $(login_version)
+liblogin_la_LDFLAGS = -version-info $(login_version) $(AM_LDFLAGS)
 liblogin_la_DEPENDENCIES = $(COMPAT_OBJS)
 liblogin_la_LIBADD = $(PLAIN_LIBS) $(COMPAT_OBJS)
 libsrp_la_SOURCES = srp.c srp_init.c $(common_sources)
-libsrp_la_LDFLAGS = -version-info $(srp_version)
+libsrp_la_LDFLAGS = -version-info $(srp_version) $(AM_LDFLAGS)
 libsrp_la_DEPENDENCIES = $(COMPAT_OBJS)
 libsrp_la_LIBADD = $(SRP_LIBS) $(COMPAT_OBJS)
 libotp_la_SOURCES = otp.c otp_init.c otp.h $(common_sources)
-libotp_la_LDFLAGS = -version-info $(otp_version)
+libotp_la_LDFLAGS = -version-info $(otp_version) $(AM_LDFLAGS)
 libotp_la_DEPENDENCIES = $(COMPAT_OBJS)
 libotp_la_LIBADD = $(OTP_LIBS) $(COMPAT_OBJS)
 libntlm_la_SOURCES = ntlm.c ntlm_init.c $(common_sources)
-libntlm_la_LDFLAGS = -version-info $(ntlm_version)
+libntlm_la_LDFLAGS = -version-info $(ntlm_version) $(AM_LDFLAGS)
 libntlm_la_DEPENDENCIES = $(COMPAT_OBJS)
 libntlm_la_LIBADD = $(NTLM_LIBS) $(COMPAT_OBJS)
 libpassdss_la_SOURCES = passdss.c passdss_init.c $(common_sources)
-libpassdss_la_LDFLAGS = -version-info $(passdss_version)
+libpassdss_la_LDFLAGS = -version-info $(passdss_version) $(AM_LDFLAGS)
 libpassdss_la_DEPENDENCIES = $(COMPAT_OBJS)
 libpassdss_la_LIBADD = $(PASSDSS_LIBS) $(COMPAT_OBJS)
 
 # Auxprop Plugins
 libsasldb_la_SOURCES = sasldb.c sasldb_init.c $(common_sources)
-libsasldb_la_LDFLAGS = -version-info $(sasldb_version)
+libsasldb_la_LDFLAGS = -version-info $(sasldb_version) $(AM_LDFLAGS)
 libsasldb_la_DEPENDENCIES = $(COMPAT_OBJS)
 libsasldb_la_LIBADD = ../sasldb/libsasldb.la $(SASL_DB_LIB) $(COMPAT_OBJS)
 libldapdb_la_SOURCES = ldapdb.c ldapdb_init.c $(common_sources)
-libldapdb_la_LDFLAGS = $(LIB_LDAP) -version-info $(ldapdb_version)
+libldapdb_la_LDFLAGS = $(LIB_LDAP) -version-info $(ldapdb_version) $(AM_LDFLAGS)
 libldapdb_la_DEPENDENCIES = $(COMPAT_OBJS)
 libldapdb_la_LIBADD = $(COMPAT_OBJS)
 libsql_la_SOURCES = sql.c sql_init.c $(common_sources)
-libsql_la_LDFLAGS = $(LIB_MYSQL) $(LIB_PGSQL) $(LIB_SQLITE) -version-info $(sql_version)
+libsql_la_LDFLAGS = $(LIB_MYSQL) $(LIB_PGSQL) $(LIB_SQLITE) -version-info $(sql_ $(AM_LDFLAGS)version)
 libsql_la_DEPENDENCIES = $(COMPAT_OBJS)
 libsql_la_LIBADD = $(COMPAT_OBJS)
 
 # Instructions for making the _init files
-init_src = anonymous_init.c crammd5_init.c digestmd5_init.c gs2_init.c gssapiv2_init.c \
+init_src = anonymous_init.c crammd5_init.c digestmd5_init.c gssapiv2_init.c \
 kerberos4_init.c login_init.c plain_init.c srp_init.c otp_init.c ntlm_init.c \
 passdss_init.c sasldb_init.c sql_init.c ldapdb_init.c
 
