--- a/saslauthd/saslauthd.h.in
+++ b/saslauthd/saslauthd.h.in
@@ -206,7 +206,7 @@
 /* Use NDBM for SASLdb */
 #undef SASL_NDBM
 
-/* The size of a `long', as computed by sizeof. */
+/* The size of `long', as computed by sizeof. */
 #undef SIZEOF_LONG
 
 /* User KERBEROS_V4 Staticly */
