--- a/saslauthd/saslauthd.h.in
+++ b/saslauthd/saslauthd.h.in
@@ -49,6 +49,9 @@
 /* Include GSSAPI/Kerberos 5 Support */
 #undef HAVE_GSSAPI
 
+/* Define to 1 if you have the <gssapi/gssapi_ext.h> header file. */
+#undef HAVE_GSSAPI_GSSAPI_EXT_H
+
 /* Define if you have the gssapi.h header file */
 #undef HAVE_GSSAPI_H
 
