--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+aclocal.m4
 autom4te.cache
+compile
 config.cache
 config.log
 config.status
 config.h
+depcomp
 
 libtool
 ltmain.sh
@@ -10,6 +13,7 @@ missing
 
 .DS_Store
 
+Makefile.in
 Makefile
 
 *.la
