--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ aclocal.m4
 autom4te.cache
 compile
 config.cache
+config.guess
 config.log
 config.status
+config.sub
 config.h
 configure
 depcomp
